--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Desktop AI chat application with NanoGPT"
 requires-python = ">=3.11"
 dependencies = [
-    "gi>=3.0",
+    "PyGObject>=3.42.0",
     "aiohttp>=3.9.0",
     "sqlalchemy>=2.0.0",
     "python-dotenv>=1.0.0",
